--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/vreddy18/2014-06-databases",
   "dependencies": {
+    "bluebird": "^2.1.3",
     "chai": "^1.9.1",
     "mocha": "^1.20.1",
     "mysql": "^2.3.2",
